# urldrill-server-v2

./: .env  README.md  admin.py  auth.py  db.py  generator.py  main.py  onerun.sh  pyproject.toml  queueing.py  structure.sql  vercel.json
static/: control.js  fetch.js  index.js
templates/: index.html  login.html
