[project]
name = "urldrill-server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.116.1",
    "jinja2>=3.1.6",
    "passlib>=1.7.4",
    "psycopg-pool==3.2.6",
    "python-multipart>=0.0.20",
    "uvicorn>=0.35.0",
    "websockets>=15.0.1",
    "python-dotenv>=1.1.1",
    "redis>=6.4.0",
    "psycopg>=3.2.10",
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta:__legacy__"
